--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     ]
   },
   "dependencies": {
+    "antd": "^5.3.1",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
