--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
+    "rollup-plugin-gzip": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
